# Tamandua

./: .gitignore  CMakeLists.txt  Makefile  README.md  THANKS.md  build_all.sh  tamandua_cfg.cmake  version_config.hpp.cmake
TMD/: main.cpp
TMD/headers/: debug_gui.hpp  main_frame.hpp
TMD/src/: debug_gui.cpp  gui_client.cpp  main_frame.cpp
examples/: CMakeLists.txt  Makefile  client_main.cpp  server_main.cpp  tamandua_local.hpp
gui_client/: Makefile
gui_client/headers/: debug_gui.hpp  gui_client.hpp  main_frame.hpp  tamandua_box.hpp  tamandua_textctrl.hpp
gui_client/src/: gui_client.cpp  main_frame.cpp  tamandua_textctrl.cpp
headers/: client.hpp  command_interpreter.hpp  conference_room.hpp  exception.hpp  group.hpp  hidden_participant.hpp  log.hpp  logger.hpp  message.hpp  message_buffer.hpp  message_composer.hpp  message_header.hpp  message_interpreter.hpp  module_base.hpp  participant.hpp  private_room.hpp  room.hpp  root.hpp  root_room.hpp  server.hpp  server_config.hpp  session.hpp  tamandua.hpp  types.hpp  user.hpp  user_message_interpreter.hpp  utility.hpp  version.hpp
headers/modules/: base_user_module.hpp  help_module.hpp  history_module.hpp  registration_module.hpp  stat_module.hpp
src/: client.cpp  command_interpreter.cpp  conference_room.cpp  group.cpp  hidden_participant.cpp  message_buffer.cpp  message_composer.cpp  message_interpreter.cpp  module_base.cpp  participant.cpp  private_room.cpp  room.cpp  root.cpp  root_room.cpp  server.cpp  session.cpp  user.cpp  user_message_interpreter.cpp  utility.cpp  version.cpp
src/modules/: base_user_module.cpp  help_module.cpp  history_module.cpp  registration_module.cpp  stat_module.cpp
tests/: Makefile  client.cpp  client_main.cpp  server.cpp
